--- a/GlympsApp/GoogleService-Info.plist
+++ b/GlympsApp/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>709215467543-mjj8utkab6mc5534q281qpga12mpmla6.apps.googleusercontent.com</string>
+	<string>709215467543-j0k74quqe8ibbt9tnij7msreu2ipp4m9.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.709215467543-mjj8utkab6mc5534q281qpga12mpmla6</string>
+	<string>com.googleusercontent.apps.709215467543-j0k74quqe8ibbt9tnij7msreu2ipp4m9</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAhuWutui3kGWXiRovS-kYiM9XCAgICrmM</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,23 +13,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>JamesBMorris.GlympsApp</string>
+	<string>com.glymps.glymps-date</string>
 	<key>PROJECT_ID</key>
 	<string>glymps-a02f6</string>
 	<key>STORAGE_BUCKET</key>
 	<string>glymps-a02f6.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:709215467543:ios:b5037f462271dbd9774452</string>
+	<string>1:709215467543:ios:a579c721408c2435774452</string>
 	<key>DATABASE_URL</key>
 	<string>https://glymps-a02f6.firebaseio.com</string>
 </dict>
