--- a/GlympsApp/Info.plist
+++ b/GlympsApp/Info.plist
@@ -18,6 +18,19 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Bundle ID</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.glymps.glymps-date</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>GADApplicationIdentifier</key>
@@ -28,6 +41,8 @@
 	<string>pk.eyJ1IjoiZ2x5bXBzIiwiYSI6ImNrM2J0YXpsdDBzZ3AzZHBkNnV0b2t4MnUifQ.TnR9UQ-zIj46aBWAv3GMpg</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Glymps allows you to take pictures and share them with others.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Glymps allows you to send your shareable link to your friends.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Glymps needs your location at all times so others can see and message you from the main deck.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
@@ -38,8 +53,6 @@
 	<string>Glymps allows you to take videos and share them with others.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Glymps allows you to choose photos and videos from your library and share them with others.</string>
-	<key>NSContactsUsageDescription</key>
-	<string>Glymps allows you to send your shareable link to your friends.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
